# real-estate-api

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
config/: settings.py  urls.py
realestate/: mixins.py  models.py  permissions.py
realestate/migrations/: 0001_initial.py  0002_create_default_admin.py
realestate/serializers/: property.py  transaction.py  user.py
realestate/templates/: swagger-ui.html
realestate/tests/: test_auth.py
realestate/tests/test_properties/: test_properties_create.py  test_properties_delete.py  test_properties_detail.py  test_properties_list.py  test_properties_permissions.py  test_properties_update.py
realestate/tests/test_transactions/: test_transactions_create.py  test_transactions_delete.py  test_transactions_detail.py  test_transactions_list.py  test_transactions_permissions.py  test_transactions_race_conditions.py  test_transactions_update.py
realestate/tests/test_users/: test_users_create.py  test_users_delete.py  test_users_list.py  test_users_permissions.py  test_users_update.py
realestate/views/: property.py  transaction.py  user.py
